--- a/org/colloquium/ocene_2018.org
+++ b/org/colloquium/ocene_2018.org
@@ -8,69 +8,69 @@
 |   |      2 | SW4/2014    | Vladimir   Inđić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
 |   |      3 | SW10/2014   | Milana     Bečejac     |     80 |         |           |         |     20.000 |          |           |    20. |
 |   |      4 | SW56/2014   | Milan      Desančić    |        |         |           |         |      0.000 |          |           |     0. |
-|   |      5 | SW6/2014    | Helena     Zečević     |        |         |           |         |      0.000 |          |           |     0. |
+|   |      5 | SW6/2014    | Helena     Zečević     |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |      6 | SW7/2014    | Luka       Maletin     |        |         |           |         |      0.000 |          |           |     0. |
 |   |      7 | SW25/2014   | Aleksandar Nikolić     |     90 |         |           |         |     22.500 |          |           |   22.5 |
-|   |      8 | SW28/2014   | Nemanja    Brzak       |        |         |           |         |      0.000 |          |           |     0. |
+|   |      8 | SW28/2014   | Nemanja    Brzak       |     80 |         |           |         |     20.000 |          |           |    20. |
 |   |      9 | SW22/2014   | Marija     Kovačević   |        |         |           |         |      0.000 |          |           |     0. |
 |   |     10 | SW42/2014   | Jelena     Ilić        |        |         |           |         |      0.000 |          |           |     0. |
-|   |     11 | SW45/2014   | Drago      Stevanović  |        |         |           |         |      0.000 |          |           |     0. |
-|   |     12 | SW54/2014   | David      Vuletaš     |        |         |           |         |      0.000 |          |           |     0. |
+|   |     11 | SW45/2014   | Drago      Stevanović  |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     12 | SW54/2014   | David      Vuletaš     |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     13 | SW31/2014   | Petar      Radošević   |        |         |           |         |      0.000 |          |           |     0. |
 |   |     14 | SW34/2014   | Luka       Mihajlović  |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     15 | SW37/2014   | Vojin      Pešalj      |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     16 | SW58/2014   | Michael    Milinković  |        |         |           |         |      0.000 |          |           |     0. |
-|   |     17 | SW13/2014   | Katarina   Čukurov     |        |         |           |         |      0.000 |          |           |     0. |
+|   |     17 | SW13/2014   | Katarina   Čukurov     |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     18 | SW94/2016   | Nikola     Garabandić  |        |         |           |         |      0.000 |          |           |     0. |
-|   |     19 | SW12/2014   | Ivana      Zeljković   |        |         |           |         |      0.000 |          |           |     0. |
+|   |     19 | SW12/2014   | Ivana      Zeljković   |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     20 | SW33/2014   | Dejan      Zarić       |        |         |           |         |      0.000 |          |           |     0. |
-|   |     21 | SW32/2114   | Nikola     Lošić       |        |         |           |         |      0.000 |          |           |     0. |
+|   |     21 | SW32/2114   | Nikola     Lošić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
 |   |     22 | SW11/2114   | Dragan     Vujanović   |        |         |           |         |      0.000 |          |           |     0. |
 |   |     23 | SW24/2114   | Acko       Spasić      |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     24 | SW47/2014   | Ana        Rudić       |        |         |           |         |      0.000 |          |           |     0. |
 |   |     25 | SW48/2014   | Novak      Marin       |        |         |           |         |      0.000 |          |           |     0. |
-|   |     26 | SW50/2014   | Vanja      Zorić       |        |         |           |         |      0.000 |          |           |     0. |
-|   |     27 | SW60/2014   | Dušan      Dudarin     |        |         |           |         |      0.000 |          |           |     0. |
-|   |     28 | SW17/2014   | Sandra     Rajanović   |        |         |           |         |      0.000 |          |           |     0. |
-|   |     29 | SW27/2014   | Nikolina   Radičić     |        |         |           |         |      0.000 |          |           |     0. |
+|   |     26 | SW50/2014   | Vanja      Zorić       |     80 |         |           |         |     20.000 |          |           |    20. |
+|   |     27 | SW60/2014   | Dušan      Dudarin     |     30 |         |           |         |      7.500 |          |           |    7.5 |
+|   |     28 | SW17/2014   | Sandra     Rajanović   |     80 |         |           |         |     20.000 |          |           |    20. |
+|   |     29 | SW27/2014   | Nikolina   Radičić     |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     30 | SW38/2014   | Tatjana    Zdravković  |        |         |           |         |      0.000 |          |           |     0. |
 |   |     31 | SW89/2016   | Uroš       Jovanović   |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     32 | SW5/2014    | Stefan     Colić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
 |   |     33 | SW15/2014   | Ognjen     Vlajić      |        |         |           |         |      0.000 |          |           |     0. |
-|   |     34 | SW21/2014   | Tomislav   Dobrički    |        |         |           |         |      0.000 |          |           |     0. |
+|   |     34 | SW21/2014   | Tomislav   Dobrički    |     90 |         |           |         |     22.500 |          |           |   22.5 |
 |   |     35 | SW53/2014   | Milan      Šalić       |        |         |           |         |      0.000 |          |           |     0. |
 |   |     36 | SW61/2015   | Stefan     Plazić      |        |         |           |         |      0.000 |          |           |     0. |
 |   |     37 | SW61/2014   | Mladen     Stajčić     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     38 | SW62/2014   | Miodrag    Vilotijević |        |         |           |         |      0.000 |          |           |     0. |
 |   |     39 | SW63/2014   | Nemanja    Žunić       |        |         |           |         |      0.000 |          |           |     0. |
 |   |     40 | SW8/2014    | Ognjen     Francuski   |     80 |         |           |         |     20.000 |          |           |    20. |
-|   |     41 | SW16/2014   | Monika     Erdeg       |        |         |           |         |      0.000 |          |           |     0. |
+|   |     41 | SW16/2014   | Monika     Erdeg       |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     42 | SW26/2014   | Sara       Perić       |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     43 | SW29/2014   | Miloš      Pavlić      |        |         |           |         |      0.000 |          |           |     0. |
 |   |     44 | SW85/2017   | Aleksandar Đurić       |        |         |           |         |      0.000 |          |           |     0. |
-|   |     45 | SW86/2017   | Dara       Jovanović   |        |         |           |         |      0.000 |          |           |     0. |
+|   |     45 | SW86/2017   | Dara       Jovanović   |     70 |         |           |         |     17.500 |          |           |   17.5 |
 |   |     46 | SW90/2017   | Milica     Lazić       |        |         |           |         |      0.000 |          |           |     0. |
-|   |     47 | SW91/2017   | Nemanja    Đuričić     |        |         |           |         |      0.000 |          |           |     0. |
+|   |     47 | SW91/2017   | Nemanja    Đuričić     |     80 |         |           |         |     20.000 |          |           |    20. |
 |   |     48 | SW2/2014    | Noemi      Sabadoš     |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     49 | SW20/2014   | Nevena     Đerić       |        |         |           |         |      0.000 |          |           |     0. |
+|   |     49 | SW20/2014   | Nevena     Đerić       |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     50 | SW18/2014   | Radoš      Aćimović    |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     51 | SW43/2014   | Nevena     Lazarević   |        |         |           |         |      0.000 |          |           |     0. |
-|   |     52 | SW44/2014   | Sreten     Stokić      |        |         |           |         |      0.000 |          |           |     0. |
-|   |     53 | SW96/2016   | Filip      Jablanović  |        |         |           |         |      0.000 |          |           |     0. |
+|   |     51 | SW43/2014   | Nevena     Lazarević   |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     52 | SW44/2014   | Sreten     Stokić      |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     53 | SW96/2016   | Filip      Jablanović  |     80 |         |           |         |     20.000 |          |           |    20. |
 |   |     54 | SW36/2014   | Natalija   Bogdanović  |        |         |           |         |      0.000 |          |           |     0. |
 |   |     55 | SW3/2014    | Andreja    Isaković    |        |         |           |         |      0.000 |          |           |     0. |
 |   |     56 | SW23/2014   | Milica     Mlađenović  |        |         |           |         |      0.000 |          |           |     0. |
-|   |     57 | SW30/2014   | Filip      Savić       |        |         |           |         |      0.000 |          |           |     0. |
+|   |     57 | SW30/2014   | Filip      Savić       |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     58 | SW51/2014   | Aleksandar Savić       |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     59 | SW19/2014   | Stefan     Đurić       |        |         |           |         |      0.000 |          |           |     0. |
 |   |     60 | SW40/2014   | Miroslav   Kospić      |        |         |           |         |      0.000 |          |           |     0. |
-|   |     61 | SW41/2014   | Momir      Kostić      |        |         |           |         |      0.000 |          |           |     0. |
+|   |     61 | SW41/2014   | Momir      Kostić      |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     62 | SW19/2013   | Ivan       Mihajlov    |        |         |           |         |      0.000 |          |           |     0. |
 |   |     63 | SW92/2016   | Goran      Janković    |        |         |           |         |      0.000 |          |           |     0. |
 |   |     64 | SW87/2017   | Đorđe      Ilić        |        |         |           |         |      0.000 |          |           |     0. |
 |   |     65 | SW88/2017   | Nikola     Đurđević    |     40 |         |           |         |     10.000 |          |           |    10. |
 |   |     66 | SW89/2017   | Mirjana    Lakić       |      0 |         |           |         |      0.000 |          |           |     0. |
-|   |     67 | SW90/2016   | Stefan     Kikanović   |        |         |           |         |      0.000 |          |           |     0. |
+|   |     67 | SW90/2016   | Stefan     Kikanović   |     70 |         |           |         |     17.500 |          |           |   17.5 |
 |   |     68 | SW91/2016   | Vladislav  Milivojević |        |         |           |         |      0.000 |          |           |     0. |
 |   |     69 | SW93/2016   | Novica     Nikolić     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     70 | SW49/2013   | Ivan       Vujić       |        |         |           |         |      0.000 |          |           |     0. |
@@ -78,7 +78,7 @@
 |   |     72 | SW97/2016   | Jovan      Miletić     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     73 | SW44/2013   | Injac      Branko      |        |         |           |         |      0.000 |          |           |     0. |
 |   |     74 | SW54/2013   | Milović    Aleksa      |     40 |         |           |         |     10.000 |          |           |    10. |
-|   |     75 | SW60/2013   | Majkić     Miloš       |        |         |           |         |      0.000 |          |           |     0. |
+|   |     75 | SW60/2013   | Majkić     Miloš       |     20 |         |           |         |      5.000 |          |           |     5. |
 |   |     76 | SW64/2014   | Dunja      Krga        |        |         |           |         |      0.000 |          |           |     0. |
 |   |     77 | SW37/2013   | Katarina   Cerović     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     78 | SW59/2013   | Nikola Dakić           |     60 |         |           |         |     15.000 |          |           |    15. |
@@ -86,11 +86,12 @@
 |   |     80 | SL8/2014    | Danka Vasić            |     50 |         |           |         |     12.500 |          |           |   12.5 |
 |   |     81 | SL40/2014   | Jelena Popović         |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     82 | SW41/2013   | Miljana Vinokić        |     40 |         |           |         |     10.000 |          |           |    10. |
-|   |     83 | SW53/2013   | Predrag    Falčić      |        |         |           |         |      0.000 |          |           |     0. |
+|   |     83 | ???         | Vuk Vladisavljević     |     80 |         |           |         |     20.000 |          |           |    20. |
+|   |     84 | SW53/2013   | Predrag    Falčić      |        |         |           |         |      0.000 |          |           |     0. |
 | ^ | brStud |             |                        |        |         |           |         |            |          |           |        |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |        | Prosečno    |                        | 77.273 |   0.000 |     0.000 |   0.000 |      5.120 |    0.000 |           |  5.120 |
+|   |        | Prosečno    |                        | 81.522 |   0.000 |     0.000 |   0.000 |     11.161 |    0.000 |           | 11.161 |
 |   |        | Položilo    | 0                      |        |         |           |         |            |          |           |        |
 | ^ |        |             | polozilo               |        |         |           |         |            |          |           |        |
 |   |        | Prolaznost  | 0.000                  |        |         |           |         |            |          |           |        |
-#+TBLFM: @>$4=$polozilo/$brStud;%.3f::@>>>>$12=vmean(@2$12..@84$12);%.3f::@>>>>$5=vmean(@2$5..@84$5);%.3f::@>>>>$6=vmean(@2$6..@84$6);%.3f::@>>>>$7=vmean(@2$7..@84$7);%.3f::@>>>>$8=vmean(@2$8..@84$8);%.3f::@>>>>$9=vmean(@2$9..@84$9);%.3f::@>>>>$10=vmean(@2$10..@84$10);%.3f::@>>>$4=vcount(map(<if(gt(#1, 55), 1, [])>, @2$9..@84$9))::@2$2..@84$2=@# - 1::@2$9..@84$9=vsum($5..$8)/4;%.3f::@2$12..@84$12=vsum($9..$11)
+#+TBLFM: @>$4=$polozilo/$brStud;%.3f::@>>>>$12=vmean(@2$12..@85$12);%.3f::@>>>>$5=vmean(@2$5..@85$5);%.3f::@>>>>$6=vmean(@2$6..@85$6);%.3f::@>>>>$7=vmean(@2$7..@85$7);%.3f::@>>>>$8=vmean(@2$8..@85$8);%.3f::@>>>>$9=vmean(@2$9..@85$9);%.3f::@>>>>$10=vmean(@2$10..@85$10);%.3f::@>>>$4=vcount(map(<if(gt(#1, 55), 1, [])>, @2$9..@85$9))::@2$2..@85$2=@# - 1::@2$9..@85$9=vsum($5..$8)/4;%.3f::@2$12..@85$12=vsum($9..$11)
