--- a/org/colloquium/ocene_2018.org
+++ b/org/colloquium/ocene_2018.org
@@ -46,7 +46,7 @@
 |   |     40 | SW8/2014    | Ognjen     Francuski   |     80 |         |           |         |     20.000 |          |           |    20. |
 |   |     41 | SW16/2014   | Monika     Erdeg       |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     42 | SW26/2014   | Sara       Perić       |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     43 | SW29/2014   | Miloš      Pavlić      |        |         |           |         |      0.000 |          |           |     0. |
+|   |     43 | SW29/2014   | Miloš      Pavlić      |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     44 | SW85/2017   | Aleksandar Đurić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
 |   |     45 | SW86/2017   | Dara       Jovanović   |     70 |         |           |         |     17.500 |          |           |   17.5 |
 |   |     46 | SW90/2017   | Milica     Lazić       |    100 |         |           |         |     25.000 |          |           |    25. |
@@ -92,7 +92,7 @@
 |   |     86 | SW53/2013   | Predrag    Falčić      |        |         |           |         |      0.000 |          |           |     0. |
 | ^ | brStud |             |                        |        |         |           |         |            |          |           |        |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |        | Prosečno    |                        | 84.058 |   0.000 |     0.000 |   0.000 |     16.860 |    0.000 |           | 16.860 |
+|   |        | Prosečno    |                        | 84.286 |   0.000 |     0.000 |   0.000 |     17.151 |    0.000 |           | 17.151 |
 |   |        | Položilo    | 0                      |        |         |           |         |            |          |           |        |
 | ^ |        |             | polozilo               |        |         |           |         |            |          |           |        |
 |   |        | Prolaznost  | 0.000                  |        |         |           |         |            |          |           |        |
