--- a/org/colloquium/ocene_2018.org
+++ b/org/colloquium/ocene_2018.org
@@ -25,7 +25,7 @@
 |   |     19 | SW12/2014   | Ivana      Zeljković   |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     20 | SW33/2014   | Dejan      Zarić       |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     21 | SW32/2014   | Nikola     Lošić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
-|   |     22 | SW11/2014   | Dragan     Vujanović   |        |         |           |         |      0.000 |          |           |     0. |
+|   |     22 | SW11/2014   | Dragan     Vujanović   |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     23 | SW24/2014   | Acko       Spasić      |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     24 | SW47/2014   | Ana        Rudić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
 |   |     25 | SW48/2014   | Novak      Marin       |     80 |         |           |         |     20.000 |          |           |    20. |
@@ -92,7 +92,7 @@
 |   |     86 | SW53/2013   | Predrag    Falčić      |        |         |           |         |      0.000 |          |           |     0. |
 | ^ | brStud |             |                        |        |         |           |         |            |          |           |        |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |        | Prosečno    |                        | 84.286 |   0.000 |     0.000 |   0.000 |     17.151 |    0.000 |           | 17.151 |
+|   |        | Prosečno    |                        | 84.507 |   0.000 |     0.000 |   0.000 |     17.442 |    0.000 |           | 17.442 |
 |   |        | Položilo    | 0                      |        |         |           |         |            |          |           |        |
 | ^ |        |             | polozilo               |        |         |           |         |            |          |           |        |
 |   |        | Prolaznost  | 0.000                  |        |         |           |         |            |          |           |        |
