--- a/org/haskell.org
+++ b/org/haskell.org
@@ -24,7 +24,8 @@ language.
 
   Haskell jasno nameće način razmišljanja. Jedino kod nastao čisto
   funkcionalnim načinom razmišljanja se može[fn:1] zapisati u
-  Haskell-u.
+  Haskell-u. Tipski neispravne izraze kompajler detektuje i
+  zabranjuje.
 
   Pošto je "funckionalan programski jezik" veoma rastegljiv pojam
   odmah ovde na početku ćemo reći šta za nas znači da je Haskell
@@ -57,8 +58,8 @@ language.
   svi tipovi se proveravaju u vreme kompajliranja. Program koji nije
   korektan sa stanovišta tipova se ne može kompajlirati a još manje
   pokrenuti. Tipovi izraza _nisu_ dostupni u vreme izvršavanja ---
-  _nisu_ ni potrebni, kompajlirani kod je _korektan_ i to je dokazivo
-  "matematikom koja stoji iza Haskell kompajlera".
+  _nisu_ ni potrebni[fn:4], kompajlirani kod je _korektan_ i to je dokazivo
+  "matematikom koja stoji iza Haskell kompajlera".[fn:5]
 
   U nastavku ćemo dati neke ideje koje su od najveće važnosti u
   Haskell porgramiranju.
@@ -85,6 +86,14 @@ language.
      su potrebni. Pošto je Haskell-ov type sistem prilično ekspresivan
      to nije trivijalan zadatak ali zato jeste veliki korak ka jasnom
      razumevanju strukture programa.
+
+     #+BEGIN_QUOTE
+     Kao posledicu imamo da kada ne znamo šta treba da radi program ne
+     možemo takav program ni da napravimo (kompajliramo). Kolikogod
+     prethodna rečenica zvučala paradoksalno svi smo nekada svedočili
+     situacijama u kojima je program napisan, i radi, čak iako niko
+     nije u stanju da kaže šta treba da radi.
+     #+END_QUOTE
 
    - Služi kao forma dokumentacije
 
@@ -274,42 +283,42 @@ language.
     n-torke ali se u praksi uglavnom koriste parovi jer za ostalo
     posotje bolji načini predstavljanja.
 
-   #+INCLUDE: "haskellNTP/showcase/src/Intro.hs" src haskell :lines "120-122"
+    #+INCLUDE: "haskellNTP/showcase/src/Intro.hs" src haskell :lines "120-122"
 
-   Obratiti pažnju da su n-torke različitihj tipova:
+    Obratiti pažnju da su n-torke različitihj tipova:
 
-   #+INCLUDE: "haskellNTP/showcase/src/Intro.hs" src haskell :lines "123-131"
+    #+INCLUDE: "haskellNTP/showcase/src/Intro.hs" src haskell :lines "123-131"
 
-   N-torkama se u praksi najčešće pristupa [[https://en.wikipedia.org/wiki/Pattern_matching][pattern matching]]-om:
+    N-torkama se u praksi najčešće pristupa [[https://en.wikipedia.org/wiki/Pattern_matching][pattern matching]]-om:
 
-   #+INCLUDE: "haskellNTP/showcase/src/Intro.hs" src haskell :lines "132-136"
+    #+INCLUDE: "haskellNTP/showcase/src/Intro.hs" src haskell :lines "132-136"
 
 *** Funkcije više argumenata
     Funkcija sa više argumenata se definiše na sledeći način:
 
-   #+INCLUDE: "haskellNTP/showcase/src/Intro.hs" src haskell :lines "137-142"
+    #+INCLUDE: "haskellNTP/showcase/src/Intro.hs" src haskell :lines "137-142"
 
-   Ako Vam tip funkcije =multiArgFoo :: Int -> Int -> Int -> Int=
-   deluje čudno i pitate se:
+    Ako Vam tip funkcije =multiArgFoo :: Int -> Int -> Int -> Int=
+    deluje čudno i pitate se:
 
-   #+BEGIN_QUOTE
-   Zašto ovoliko strelica, funkcija prima 3 parametra i vraća jededan
-   zar ne bi više imalo smisla da bude nešto kao =Int Int Int -> Int=?
-   #+END_QUOTE
+    #+BEGIN_QUOTE
+    Zašto ovoliko strelica, funkcija prima 3 parametra i vraća jededan
+    zar ne bi više imalo smisla da bude nešto kao =Int Int Int -> Int=?
+    #+END_QUOTE
 
-   onda ste na dobrom tragu. Razlog za ovo je dosta dublji od same
-   sintakse i ima valjan razlog u matematici. Razlog za ovakvu
-   notaciju je [[https://wiki.haskell.org/Currying][Currying]].
+    onda ste na dobrom tragu. Razlog za ovo je dosta dublji od same
+    sintakse i ima valjan razlog u matematici. Razlog za ovakvu
+    notaciju je [[https://wiki.haskell.org/Currying][Currying]].
 
-   #+BEGIN_QUOTE
-   /Currying/ je proces transformacije funckije koja prima više
-   argumenata u funckiju koja prima samo jedan argument i vraća drugu
-   funkciju ako su još neki parametri potrebni.
-   #+END_QUOTE
+    #+BEGIN_QUOTE
+    /Currying/ je proces transformacije funckije koja prima više
+    argumenata u funckiju koja prima samo jedan argument i vraća drugu
+    funkciju ako su još neki parametri potrebni.
+    #+END_QUOTE
 
-   Pa tako:
+    Pa tako:
 
-   #+BEGIN_SRC haskell
+    #+BEGIN_SRC haskell
      λ> foo = multiArgFoo 1
      λ> :t foo
      foo :: Int -> Int -> Int
@@ -321,11 +330,11 @@ language.
      res :: Int
      λ> res
      6
-   #+END_SRC
+    #+END_SRC
 
-   Ovo podseća na parcijalnu primenu funkcije ali _to nije baš
-   to_. Pogledajte ovu diskusiju na [[https://stackoverflow.com/questions/218025/what-is-the-difference-between-currying-and-partial-application][StackOverflow]] (barem prva dva
-   odgovora).
+    Ovo podseća na parcijalnu primenu funkcije ali _to nije baš
+    to_. Pogledajte ovu diskusiju na [[https://stackoverflow.com/questions/218025/what-is-the-difference-between-currying-and-partial-application][StackOverflow]] (barem prva dva
+    odgovora).
 
 *** Liste
     Liste su jedne od najosnovnih struktura podataka Haskell-a.
@@ -602,37 +611,37 @@ language.
 ** =data=
    Standardan način za uvođenje novih tipova:
 
-  #+INCLUDE: "haskellNTP/showcase/src/DataDeclarations.hs" src haskell :lines "5-10"
+   #+INCLUDE: "haskellNTP/showcase/src/DataDeclarations.hs" src haskell :lines "5-10"
 
-  Obratite pažnju da =Person= levo od znaka jednakosti i =Person=
-  desno od znaka jednakosti nisu iste stvari. Ono sa leve strane unosi
-  novi pojam u jezik tipova dok ono sa desne strane unosi novi pojam u
-  jezik izraza. U primeru gore samo se slučajno isto zovu. Evo
-  primera:
+   Obratite pažnju da =Person= levo od znaka jednakosti i =Person=
+   desno od znaka jednakosti nisu iste stvari. Ono sa leve strane unosi
+   novi pojam u jezik tipova dok ono sa desne strane unosi novi pojam u
+   jezik izraza. U primeru gore samo se slučajno isto zovu. Evo
+   primera:
 
-  #+INCLUDE: "haskellNTP/showcase/src/DataDeclarations.hs" src haskell :lines "11-16"
+   #+INCLUDE: "haskellNTP/showcase/src/DataDeclarations.hs" src haskell :lines "11-16"
 
-  =MkPerson= je u jeziku izraza, a =Person1= u jeziku tipova.
+   =MkPerson= je u jeziku izraza, a =Person1= u jeziku tipova.
 
-  Ono sa leve strane jednakosti naziva se /type constructor/ jer
-  konstruiše tip u jeziku tipova, ono sa desne strane se naziva /data
-  constructor/ jer konstruiše vrednost tog tipa u jeziku izraza.
+   Ono sa leve strane jednakosti naziva se /type constructor/ jer
+   konstruiše tip u jeziku tipova, ono sa desne strane se naziva /data
+   constructor/ jer konstruiše vrednost tog tipa u jeziku izraza.
 
-  Pogledajmo sledeći primer:
+   Pogledajmo sledeći primer:
 
-  #+INCLUDE: "haskellNTP/showcase/src/DataDeclarations.hs" src haskell :lines "37-64"
+   #+INCLUDE: "haskellNTP/showcase/src/DataDeclarations.hs" src haskell :lines "37-64"
 
-  Tipovi kao što su =CardValue= i =Suit= gde specificiramo oblik
-  svakog elementa zovu se [[https://wiki.haskell.org/Algebraic_data_type][algebartski tipovi]]. Algebarski tipovi se
-  tako zovu jer se definišu korišćenjem "algebarskih" operacija
-  ("algebra" ovde praktično znači operaciju sabiranja --- izbora =A |
-  B= i množenja --- kombinacije =A B=). Npr. naš prvi tip =Person= je
-  kombinacija dva =String=-a, =Suit= je izbor jedne od boja na
-  kartama.
+   Tipovi kao što su =CardValue= i =Suit= gde specificiramo oblik
+   svakog elementa zovu se [[https://wiki.haskell.org/Algebraic_data_type][algebartski tipovi]]. Algebarski tipovi se
+   tako zovu jer se definišu korišćenjem "algebarskih" operacija
+   ("algebra" ovde praktično znači operaciju sabiranja --- izbora =A |
+   B= i množenja --- kombinacije =A B=). Npr. naš prvi tip =Person= je
+   kombinacija dva =String=-a, =Suit= je izbor jedne od boja na
+   kartama.
 
-  Tipovi mogu biti i parametrizovani:
+   Tipovi mogu biti i parametrizovani:
 
-  #+INCLUDE: "haskellNTP/showcase/src/DataDeclarations.hs" src haskell :lines "65-71"
+   #+INCLUDE: "haskellNTP/showcase/src/DataDeclarations.hs" src haskell :lines "65-71"
 
 *** Records sintaksa
     Postoji i alternativni način za uvođenje novih tipova kada se
@@ -732,7 +741,7 @@ language.
   Ako želimo da naš tip može da se poredi treba da napravimo instancu
   našeg tipa u =Eq= klasi.
 
-   #+INCLUDE: "haskellNTP/showcase/src/TypeClasses.hs" src haskell :lines "5-18"
+  #+INCLUDE: "haskellNTP/showcase/src/TypeClasses.hs" src haskell :lines "5-18"
 
 ** Automatsko instanciranje sa =deriving=
    Kada je situacija dovoljno prosta, kompajler može samostalno da
@@ -1046,10 +1055,19 @@ language.
 
 * Footnotes
 
+[fn:5] Dokazivost se komplikuje kada se u obzir uzima lenje
+izvršavanje i [[https://wiki.haskell.org/Bottom]["bottom"-i]].
+
+[fn:4] Nečega kao što je refleksija nema. U principu, ako želite da
+rezonujete o tipovima u vreme izvršavanja, to samo znači da vaši
+tipovi nisu dovoljno dobri.
+
 [fn:3] Ovaj deo je uglavnom preuzet sa [[http://www.seas.upenn.edu/~cis194/spring13/lectures/01-intro.html][cis194]] (koji svakako
 preporučujem u celini :) ).
 
-[fn:2] Izrazi koji imaju sporedne efekte se _veoma_ posebno tretiraju.
+[fn:2] Teorija koja stoji iza Haksell-a zapravo često ima prilično
+prostu alternativu mutiranju i sličnim problemima. Teorija kategorija
+bi kategoriju koja takve probleme opisuje zvala [[https://bartoszmilewski.com/2014/12/23/kleisli-categories/][Kleisli]] kategorija.
 
 [fn:1] Naravno, sve se može ako je čovek dovoljno uporan, samo nije
 uvek najpametnije.
