--- a/org/colloquium/ocene_2018.org
+++ b/org/colloquium/ocene_2018.org
@@ -4,95 +4,95 @@
 
 |   |    br. | br. indeksa | ime i prezime          | python | clojure | smalltalk | haskell | ukupno kol | projekat | test za 6 | ukupno |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |      1 | SW1/2014    | Žarko      Drageljević |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |      1 | SW1/2014    | Žarko      Drageljević |    100 |      80 |           |         |     45.000 |          |           |    45. |
 |   |      2 | SW4/2014    | Vladimir   Inđić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
-|   |      3 | SW10/2014   | Milana     Bečejac     |     80 |         |           |         |     20.000 |          |           |    20. |
-|   |      4 | SW56/2014   | Milan      Desančić    |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |      3 | SW10/2014   | Milana     Bečejac     |     80 |       0 |           |         |     20.000 |          |           |    20. |
+|   |      4 | SW56/2014   | Milan      Desančić    |    100 |      60 |           |         |     40.000 |          |           |    40. |
 |   |      5 | SW6/2014    | Helena     Zečević     |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |      6 | SW7/2014    | Luka       Maletin     |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |      7 | SW25/2014   | Aleksandar Nikolić     |     90 |         |           |         |     22.500 |          |           |   22.5 |
-|   |      8 | SW28/2014   | Nemanja    Brzak       |     80 |         |           |         |     20.000 |          |           |    20. |
+|   |      6 | SW7/2014    | Luka       Maletin     |    100 |      90 |           |         |     47.500 |          |           |   47.5 |
+|   |      7 | SW25/2014   | Aleksandar Nikolić     |     90 |      80 |           |         |     42.500 |          |           |   42.5 |
+|   |      8 | SW28/2014   | Nemanja    Brzak       |     80 |      40 |           |         |     30.000 |          |           |    30. |
 |   |      9 | SW22/2014   | Marija     Kovačević   |        |         |           |         |      0.000 |          |           |     0. |
-|   |     10 | SW42/2014   | Jelena     Ilić        |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     10 | SW42/2014   | Jelena     Ilić        |    100 |     100 |           |         |     50.000 |          |           |    50. |
 |   |     11 | SW45/2014   | Drago      Stevanović  |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     12 | SW54/2014   | David      Vuletaš     |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     13 | SW31/2014   | Petar      Radošević   |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     14 | SW34/2014   | Luka       Mihajlović  |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     15 | SW37/2014   | Vojin      Pešalj      |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     13 | SW31/2014   | Petar      Radošević   |    100 |     100 |           |         |     50.000 |          |           |    50. |
+|   |     14 | SW34/2014   | Luka       Mihajlović  |    100 |      80 |           |         |     45.000 |          |           |    45. |
+|   |     15 | SW37/2014   | Vojin      Pešalj      |    100 |     100 |           |         |     50.000 |          |           |    50. |
 |   |     16 | SW58/2014   | Michael    Milinković  |        |         |           |         |      0.000 |          |           |     0. |
-|   |     17 | SW13/2014   | Katarina   Čukurov     |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     18 | SW94/2016   | Nikola     Garabandić  |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     17 | SW13/2014   | Katarina   Čukurov     |    100 |      60 |           |         |     40.000 |          |           |    40. |
+|   |     18 | SW94/2016   | Nikola     Garabandić  |    100 |      60 |           |         |     40.000 |          |           |    40. |
 |   |     19 | SW12/2014   | Ivana      Zeljković   |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     20 | SW33/2014   | Dejan      Zarić       |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     21 | SW32/2014   | Nikola     Lošić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
+|   |     21 | SW32/2014   | Nikola     Lošić       |     90 |      80 |           |         |     42.500 |          |           |   42.5 |
 |   |     22 | SW11/2014   | Dragan     Vujanović   |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     23 | SW24/2014   | Acko       Spasić      |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     24 | SW47/2014   | Ana        Rudić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
-|   |     25 | SW48/2014   | Novak      Marin       |     80 |         |           |         |     20.000 |          |           |    20. |
+|   |     25 | SW48/2014   | Novak      Marin       |     80 |      40 |           |         |     30.000 |          |           |    30. |
 |   |     26 | SW50/2014   | Vanja      Zorić       |     80 |         |           |         |     20.000 |          |           |    20. |
-|   |     27 | SW60/2014   | Dušan      Dudarin     |     30 |         |           |         |      7.500 |          |           |    7.5 |
-|   |     28 | SW17/2014   | Sandra     Rajanović   |     80 |         |           |         |     20.000 |          |           |    20. |
-|   |     29 | SW27/2014   | Nikolina   Radičić     |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     27 | SW60/2014   | Dušan      Dudarin     |     30 |      40 |           |         |     17.500 |          |           |   17.5 |
+|   |     28 | SW17/2014   | Sandra     Rajanović   |     80 |      60 |           |         |     35.000 |          |           |    20. |
+|   |     29 | SW27/2014   | Nikolina   Radičić     |    100 |      70 |           |         |     42.500 |          |           |   42.5 |
 |   |     30 | SW38/2014   | Tatjana    Zdravković  |     80 |         |           |         |     20.000 |          |           |    20. |
-|   |     31 | SW89/2016   | Uroš       Jovanović   |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     32 | SW5/2014    | Stefan     Colić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
+|   |     31 | SW89/2016   | Uroš       Jovanović   |    100 |      40 |           |         |     35.000 |          |           |    35. |
+|   |     32 | SW5/2014    | Stefan     Colić       |     90 |      60 |           |         |     37.500 |          |           |   37.5 |
 |   |     33 | SW15/2014   | Ognjen     Vlajić      |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     34 | SW21/2014   | Tomislav   Dobrički    |     90 |         |           |         |     22.500 |          |           |   22.5 |
+|   |     34 | SW21/2014   | Tomislav   Dobrički    |     90 |     100 |           |         |     47.500 |          |           |   47.5 |
 |   |     35 | SW53/2014   | Milan      Šalić       |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     36 | SW61/2015   | Stefan     Plazić      |        |         |           |         |      0.000 |          |           |     0. |
 |   |     37 | SW61/2014   | Mladen     Stajčić     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     38 | SW62/2014   | Miodrag    Vilotijević |        |         |           |         |      0.000 |          |           |     0. |
 |   |     39 | SW63/2014   | Nemanja    Žunić       |        |         |           |         |      0.000 |          |           |     0. |
-|   |     40 | SW8/2014    | Ognjen     Francuski   |     80 |         |           |         |     20.000 |          |           |    20. |
-|   |     41 | SW16/2014   | Monika     Erdeg       |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     42 | SW26/2014   | Sara       Perić       |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     43 | SW29/2014   | Miloš      Pavlić      |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     40 | SW8/2014    | Ognjen     Francuski   |     80 |      80 |           |         |     40.000 |          |           |    40. |
+|   |     41 | SW16/2014   | Monika     Erdeg       |    100 |     100 |           |         |     50.000 |          |           |    50. |
+|   |     42 | SW26/2014   | Sara       Perić       |    100 |      70 |           |         |     42.500 |          |           |   42.5 |
+|   |     43 | SW29/2014   | Miloš      Pavlić      |    100 |      80 |           |         |     45.000 |          |           |    45. |
 |   |     44 | SW85/2017   | Aleksandar Đurić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
-|   |     45 | SW86/2017   | Dara       Jovanović   |     70 |         |           |         |     17.500 |          |           |   17.5 |
-|   |     46 | SW90/2017   | Milica     Lazić       |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     45 | SW86/2017   | Dara       Jovanović   |     70 |      70 |           |         |     35.000 |          |           |    35. |
+|   |     46 | SW90/2017   | Milica     Lazić       |    100 |      40 |           |         |     35.000 |          |           |    35. |
 |   |     47 | SW91/2017   | Nemanja    Đuričić     |     80 |         |           |         |     20.000 |          |           |    20. |
 |   |     48 | SW2/2014    | Noemi      Sabadoš     |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     49 | SW20/2014   | Nevena     Đerić       |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     50 | SW18/2014   | Radoš      Aćimović    |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     51 | SW43/2014   | Nevena     Lazarević   |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     50 | SW18/2014   | Radoš      Aćimović    |    100 |      60 |           |         |     40.000 |          |           |    40. |
+|   |     51 | SW43/2014   | Nevena     Lazarević   |    100 |     100 |           |         |     50.000 |          |           |    50. |
 |   |     52 | SW44/2014   | Sreten     Stokić      |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     53 | SW96/2016   | Filip      Jablanović  |     80 |         |           |         |     20.000 |          |           |    20. |
+|   |     53 | SW96/2016   | Filip      Jablanović  |     80 |      60 |           |         |     35.000 |          |           |    35. |
 |   |     54 | SW36/2014   | Natalija   Bogdanović  |        |         |           |         |      0.000 |          |           |     0. |
-|   |     55 | SW3/2014    | Andreja    Isaković    |     90 |         |           |         |     22.500 |          |           |   22.5 |
-|   |     56 | SW23/2014   | Milica     Mlađenović  |     80 |         |           |         |     20.000 |          |           |    20. |
+|   |     55 | SW3/2014    | Andreja    Isaković    |     90 |     100 |           |         |     47.500 |          |           |   47.5 |
+|   |     56 | SW23/2014   | Milica     Mlađenović  |     80 |      60 |           |         |     35.000 |          |           |    35. |
 |   |     57 | SW30/2014   | Filip      Savić       |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     58 | SW51/2014   | Aleksandar Savić       |    100 |         |           |         |     25.000 |          |           |    25. |
 |   |     59 | SW19/2014   | Stefan     Đurić       |    100 |         |           |         |     25.000 |          |           |    25. |
-|   |     60 | SW40/2014   | Miroslav   Kospić      |     50 |         |           |         |     12.500 |          |           |   12.5 |
-|   |     61 | SW41/2014   | Momir      Kostić      |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     60 | SW40/2014   | Miroslav   Kospić      |     50 |      80 |           |         |     32.500 |          |           |   32.5 |
+|   |     61 | SW41/2014   | Momir      Kostić      |    100 |      60 |           |         |     40.000 |          |           |    40. |
 |   |     62 | SW19/2013   | Ivan       Mihajlov    |        |         |           |         |      0.000 |          |           |     0. |
 |   |     63 | SW92/2016   | Goran      Janković    |     70 |         |           |         |     17.500 |          |           |   17.5 |
-|   |     64 | SW87/2017   | Đorđe      Ilić        |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     64 | SW87/2017   | Đorđe      Ilić        |    100 |      60 |           |         |     40.000 |          |           |    40. |
 |   |     65 | SW88/2017   | Nikola     Đurđević    |     40 |         |           |         |     10.000 |          |           |    10. |
-|   |     66 | SW89/2017   | Mirjana    Lakić       |      0 |         |           |         |      0.000 |          |           |     0. |
-|   |     67 | SW90/2016   | Stefan     Kikanović   |     70 |         |           |         |     17.500 |          |           |   17.5 |
-|   |     68 | SW91/2016   | Vladislav  Milivojević |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     66 | SW89/2017   | Mirjana    Lakić       |      0 |      40 |           |         |     10.000 |          |           |    10. |
+|   |     67 | SW90/2016   | Stefan     Kikanović   |     70 |      80 |           |         |     37.500 |          |           |   37.5 |
+|   |     68 | SW91/2016   | Vladislav  Milivojević |    100 |      50 |           |         |     37.500 |          |           |   37.5 |
 |   |     69 | SW93/2016   | Novica     Nikolić     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     70 | SW49/2013   | Ivan       Vujić       |        |         |           |         |      0.000 |          |           |     0. |
-|   |     71 | SW58/2013   | Branko     Karać       |     80 |         |           |         |     20.000 |          |           |    20. |
+|   |     71 | SW58/2013   | Branko     Karać       |     80 |      40 |           |         |     30.000 |          |           |    30. |
 |   |     72 | SW97/2016   | Jovan      Miletić     |        |         |           |         |      0.000 |          |           |     0. |
 |   |     73 | SW44/2013   | Injac      Branko      |        |         |           |         |      0.000 |          |           |     0. |
 |   |     74 | SW54/2013   | Milović    Aleksa      |     40 |         |           |         |     10.000 |          |           |    10. |
-|   |     75 | SW60/2013   | Majkić     Miloš       |     20 |         |           |         |      5.000 |          |           |     5. |
+|   |     75 | SW60/2013   | Majkić     Miloš       |     20 |      20 |           |         |     10.000 |          |           |    10. |
 |   |     76 | SW64/2014   | Dunja      Krga        |        |         |           |         |      0.000 |          |           |     0. |
 |   |     77 | SW37/2013   | Katarina   Cerović     |        |         |           |         |      0.000 |          |           |     0. |
-|   |     78 | SW59/2013   | Nikola Dakić           |     60 |         |           |         |     15.000 |          |           |    15. |
-|   |     79 | SL25/2014   | Jovica Mitrović        |     60 |         |           |         |     15.000 |          |           |    15. |
+|   |     78 | SW59/2013   | Nikola Dakić           |     60 |      60 |           |         |     30.000 |          |           |    30. |
+|   |     79 | SL25/2014   | Jovica Mitrović        |     60 |      20 |           |         |     20.000 |          |           |    20. |
 |   |     80 | SL8/2014    | Danka Vasić            |     50 |         |           |         |     12.500 |          |           |   12.5 |
-|   |     81 | SL40/2014   | Jelena Popović         |    100 |         |           |         |     25.000 |          |           |    25. |
+|   |     81 | SL40/2014   | Jelena Popović         |    100 |      60 |           |         |     40.000 |          |           |    40. |
 |   |     82 | SW41/2013   | Miljana Vinokić        |     40 |         |           |         |     10.000 |          |           |    10. |
 |   |     83 | ???         | Vuk Vladisavljević     |     80 |         |           |         |     20.000 |          |           |    20. |
-|   |     84 | SL10/2014   | Veljko Radić           |     60 |         |           |         |     15.000 |          |           |    15. |
+|   |     84 | SL10/2014   | Veljko Radić           |     60 |      60 |           |         |     30.000 |          |           |    30. |
 |   |     85 | ???         | Sandra Todorović       |     60 |         |           |         |     15.000 |          |           |    15. |
 |   |     86 | SW53/2013   | Predrag    Falčić      |        |         |           |         |      0.000 |          |           |     0. |
 | ^ | brStud |             |                        |        |         |           |         |            |          |           |        |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |        | Prosečno    |                        | 84.507 |   0.000 |     0.000 |   0.000 |     17.442 |    0.000 |           | 17.442 |
+|   |        | Prosečno    |                        | 84.507 |  64.884 |     0.000 |   0.000 |     25.552 |    0.000 |           | 25.378 |
 |   |        | Položilo    | 0                      |        |         |           |         |            |          |           |        |
 | ^ |        |             | polozilo               |        |         |           |         |            |          |           |        |
 |   |        | Prolaznost  | 0.000                  |        |         |           |         |            |          |           |        |
