--- a/org/colloquium/ocene_2018.org
+++ b/org/colloquium/ocene_2018.org
@@ -5,8 +5,8 @@
 |   |    br. | br. indeksa | ime i prezime          | python | clojure | smalltalk | haskell | ukupno kol | projekat | test za 6 | ukupno |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
 |   |      1 | SW1/2014    | Žarko      Drageljević |    100 |      80 |           |         |     45.000 |          |           |    45. |
-|   |      2 | SW4/2014    | Vladimir   Inđić       |     90 |         |           |         |     22.500 |          |           |   22.5 |
-|   |      3 | SW10/2014   | Milana     Bečejac     |     80 |       0 |           |         |     20.000 |          |           |    20. |
+|   |      2 | SW4/2014    | Vladimir   Inđić       |     90 |     100 |           |         |     47.500 |          |           |   47.5 |
+|   |      3 | SW10/2014   | Milana     Bečejac     |     80 |      80 |           |         |     40.000 |          |           |    20. |
 |   |      4 | SW56/2014   | Milan      Desančić    |    100 |      60 |           |         |     40.000 |          |           |    40. |
 |   |      5 | SW6/2014    | Helena     Zečević     |    100 |      80 |           |         |     45.000 |          |           |    45. |
 |   |      6 | SW7/2014    | Luka       Maletin     |    100 |      90 |           |         |     47.500 |          |           |   47.5 |
@@ -92,7 +92,7 @@
 |   |     86 | SW53/2013   | Predrag    Falčić      |        |         |           |         |      0.000 |          |           |     0. |
 | ^ | brStud |             |                        |        |         |           |         |            |          |           |        |
 |---+--------+-------------+------------------------+--------+---------+-----------+---------+------------+----------+-----------+--------|
-|   |        | Prosečno    |                        | 84.507 |  62.941 |     0.000 |   0.000 |     29.884 |    0.000 |           | 29.884 |
+|   |        | Prosečno    |                        | 84.507 |  64.638 |     0.000 |   0.000 |     30.407 |    0.000 |           | 30.174 |
 |   |        | Položilo    | 0                      |        |         |           |         |            |          |           |        |
 | ^ |        |             | polozilo               |        |         |           |         |            |          |           |        |
 |   |        | Prolaznost  | 0.000                  |        |         |           |         |            |          |           |        |
